# docs/swagger.json
@@ -553,6 +553,39 @@
                 }
             }
         },
+        "/v2/farmerAccess/add/all": {
+            "put": {
+                "description": "Sets full access to all teams for farmer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Farmer Access"
+                ],
+                "summary": "Full access",
+                "parameters": [
+                    {
+                        "description": "farmer uid",
+                        "name": "fullAccessRequest",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.FullAccessRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v2/farmerAccess/get/all": {
             "get": {
                 "description": "returns all accesses",
@@ -632,7 +665,7 @@
             }
         },
         "/v2/farmerAccess/revoke": {
-            "delete": {
+            "put": {
                 "description": "revokes access to farmer",
                 "consumes": [
                     "application/json"
@@ -662,6 +695,132 @@
                             "items": {
                                 "$ref": "#/definitions/models.AccessRequest"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/v2/farmerAccess/revoke/all": {
+            "put": {
+                "description": "Sets full access to all teams for farmer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Farmer Access"
+                ],
+                "summary": "Full access",
+                "parameters": [
+                    {
+                        "description": "farmer uid",
+                        "name": "fullAccessRequest",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.FullAccessRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v2/files/download/attachment": {
+            "get": {
+                "description": "downloads attachment",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Files"
+                ],
+                "summary": "Download attachment",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "file name",
+                        "name": "fileName",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v2/files/download/file": {
+            "get": {
+                "description": "downloads file",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Files"
+                ],
+                "summary": "Download file",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "file name",
+                        "name": "fileName",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v2/files/download/inline": {
+            "get": {
+                "description": "downloads inline",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Files"
+                ],
+                "summary": "Download inline",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "file name",
+                        "name": "fileName",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -1331,6 +1490,14 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "models.FullAccessRequest": {
+            "type": "object",
+            "properties": {
+                "farmer": {
+                    "$ref": "#/definitions/models.Employee"
                 }
             }
         },
